--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
             <canvas id="game"></canvas>
         </div>
     </body>
-    <script src="out/Shape/Shape.js"></script>
-    <script src="out/Shape/Circle.js"></script>
-    <script src="out/Shape/Rectangle.js"></script>
-    <script src="out/Shape/Line.js"></script>
-    <script src="out/Shape/Chessboard.js"></script>
-    <script src="out/CGCanvasContext2D.js"></script>
+    <script src="out/Shapes/Shape.js"></script>
+    <script src="out/Shapes/Circle.js"></script>
+    <script src="out/Shapes/Rectangle.js"></script>
+    <script src="out/Shapes/Line.js"></script>
+    <script src="out/Shapes/Chessboard.js"></script>
+    <script src="out/Shapes/Chessman.js"></script>
     <script src="out/UIView.js"></script>
     <script src="out/GameView.js"></script>
     <script>
