完成了黑白棋子放置功能

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <script src="out/Shapes/Chessboard.js"></script>
     <script src="out/Shapes/Chessman.js"></script>
     <script src="out/UIView.js"></script>
-    <script src="out/GameView.js"></script>
+    <script src="out/GobangView.js"></script>
+    <script src="out/GobangBrain.js"></script>
+    <script src="out/GobangViewController.js"></script>
     <script>
+        let game = new GobangViewController()
     </script>
 </html>
