--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <script src="out/Shapes/Circle.js"></script>
     <script src="out/Shapes/Rectangle.js"></script>
     <script src="out/Shapes/Line.js"></script>
-    <script src="out/Shapes/Chessboard.js"></script>
-    <script src="out/Shapes/Chessman.js"></script>
-    <script src="out/UIView.js"></script>
+    <script src="out/Shapes/ChessboardShape.js"></script>
+    <script src="out/Shapes/ChessmanShape.js"></script>
+    <script src="out/Views/CanvasView.js"></script>
     <script src="out/GobangView.js"></script>
+    <script src="out/Models/Player.js"></script>
+    <script src="out/Models/Chessman.js"></script>
+    <script src="out/Models/Chessboard.js"></script>
     <script src="out/GobangBrain.js"></script>
     <script src="out/GobangViewController.js"></script>
     <script>
