--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>gobang</title>
+        <title>Gomoku Game</title>
     </head>
     <body>
         <div>
@@ -14,13 +14,13 @@
     <script src="out/Shapes/ChessboardShape.js"></script>
     <script src="out/Shapes/ChessmanShape.js"></script>
     <script src="out/Views/CanvasView.js"></script>
-    <script src="out/GobangView.js"></script>
+    <script src="out/GomokuView.js"></script>
     <script src="out/Models/Player.js"></script>
     <script src="out/Models/Chessman.js"></script>
     <script src="out/Models/Chessboard.js"></script>
-    <script src="out/GobangBrain.js"></script>
-    <script src="out/GobangViewController.js"></script>
+    <script src="out/GomokuBrain.js"></script>
+    <script src="out/GomokuViewController.js"></script>
     <script>
-        let game = new GobangViewController()
+        let game = new GomokuViewController()
     </script>
 </html>
