--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <div>
             <canvas id="game"></canvas>
         </div>
+        <div>
+            <canvas id="menu"></canvas>
+        </div>
     </body>
     <script src="out/Shapes/Shape.js"></script>
     <script src="out/Shapes/Circle.js"></script>
@@ -15,12 +18,17 @@
     <script src="out/Shapes/ChessmanShape.js"></script>
     <script src="out/Views/CanvasView.js"></script>
     <script src="out/GomokuView.js"></script>
+    <script src="out/MenuView.js"></script>
     <script src="out/Models/Player.js"></script>
     <script src="out/Models/Chessman.js"></script>
     <script src="out/Models/Chessboard.js"></script>
-    <script src="out/GomokuBrain.js"></script>
+    <script src="out/GomokuGame.js"></script>
+    <script src="out/AIs/AI.js"></script>
+    <script src="out/AIs/Matrix.js"></script>
+    <script src="out/AIs/AIChessboard.js"></script>
+    <script src="out/AIs/TestAI_1.js"></script>
     <script src="out/GomokuViewController.js"></script>
     <script>
-        let game = new GomokuViewController()
+        let game = new GomokuViewController(true)
     </script>
 </html>
