--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="out/Models/Chessman.js"></script>
     <script src="out/Models/Chessboard.js"></script>
     <script src="out/GomokuGame.js"></script>
+    <script src="out/AIs/Score.js"></script>
     <script src="out/AIs/AI.js"></script>
     <script src="out/AIs/Matrix.js"></script>
     <script src="out/AIs/AIChessboard.js"></script>
