现在可以更换棋子颜色了

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Gomoku Game</title>
+        <meta charset="utf-8">
     </head>
     <body>
         <div>
@@ -16,18 +17,22 @@
     <script src="out/Shapes/Line.js"></script>
     <script src="out/Shapes/ChessboardShape.js"></script>
     <script src="out/Shapes/ChessmanShape.js"></script>
+    <script src="out/Shapes/TextShape.js"></script>
+    <script src="out/Shapes/TwoHalfButton.js"></script>
+    <script src="out/Themes/Theme.js"></script>
+    <script src="out/Themes/DefaultTheme.js"></script>
+    <script src="out/Themes/VividTheme.js"></script>
     <script src="out/Views/CanvasView.js"></script>
-    <script src="out/GomokuView.js"></script>
-    <script src="out/MenuView.js"></script>
+    <script src="out/Views/GomokuView.js"></script>
+    <script src="out/Views/MenuView.js"></script>
     <script src="out/Models/Player.js"></script>
     <script src="out/Models/Chessman.js"></script>
     <script src="out/Models/Chessboard.js"></script>
-    <script src="out/GomokuGame.js"></script>
-    <script src="out/AIs/Score.js"></script>
+    <script src="out/AIs/AIScore.js"></script>
     <script src="out/AIs/AI.js"></script>
     <script src="out/AIs/Matrix.js"></script>
-    <script src="out/AIs/AIChessboard.js"></script>
     <script src="out/AIs/TestAI_1.js"></script>
+    <script src="out/GomokuGame.js"></script>
     <script src="out/GomokuViewController.js"></script>
     <script>
         let game = new GomokuViewController(true)
