--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
     <head>
         <title>Gomoku Game</title>
         <meta charset="utf-8">
+    </head>
+    <body>
+        <div>
+            <canvas id="game"></canvas>
+        </div>
+        <div>
+            <canvas id="menu"></canvas>
+        </div>
         <script src="out/Shapes/Shape.js"></script>
         <script src="out/Shapes/Circle.js"></script>
         <script src="out/Shapes/Rectangle.js"></script>
@@ -25,16 +33,8 @@
         <script src="out/AIs/TestAI_1.js"></script>
         <script src="out/GomokuGame.js"></script>
         <script src="out/GomokuViewController.js"></script>
-    </head>
-    <body>
-        <div>
-            <canvas id="game"></canvas>
-        </div>
-        <div>
-            <canvas id="menu"></canvas>
-        </div>
     </body>
     <script>
-        let game = new GomokuViewController(true)
+        new GomokuViewController(true)
     </script>
 </html>
