--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
         <div>
             <canvas id="menu"></canvas>
         </div>
-        <script src="out/Shapes/Shape.js"></script>
-        <script src="out/Shapes/Circle.js"></script>
-        <script src="out/Shapes/Rectangle.js"></script>
-        <script src="out/Shapes/Line.js"></script>
-        <script src="out/Shapes/ChessboardShape.js"></script>
-        <script src="out/Shapes/ChessmanShape.js"></script>
-        <script src="out/Shapes/TextShape.js"></script>
-        <script src="out/Shapes/TwoHalfButton.js"></script>
-        <script src="out/Themes/Theme.js"></script>
-        <script src="out/Themes/DefaultTheme.js"></script>
-        <script src="out/Themes/VividTheme.js"></script>
-        <script src="out/Views/CanvasView.js"></script>
-        <script src="out/Views/GomokuView.js"></script>
-        <script src="out/Views/MenuView.js"></script>
-        <script src="out/Models/Player.js"></script>
-        <script src="out/Models/Chessman.js"></script>
-        <script src="out/Models/Chessboard.js"></script>
-        <script src="out/AIs/AIScore.js"></script>
-        <script src="out/AIs/AI.js"></script>
-        <script src="out/AIs/Matrix.js"></script>
-        <script src="out/AIs/TestAI_1.js"></script>
-        <script src="out/GomokuGame.js"></script>
-        <script src="out/GomokuViewController.js"></script>
     </body>
-    <script>
-        new GomokuViewController(true)
+    <script src="out/Shapes/Shape.js"></script>
+    <script src="out/Shapes/Circle.js"></script>
+    <script src="out/Shapes/Rectangle.js"></script>
+    <script src="out/Shapes/Line.js"></script>
+    <script src="out/Shapes/ChessboardShape.js"></script>
+    <script src="out/Shapes/ChessmanShape.js"></script>
+    <script src="out/Shapes/TextShape.js"></script>
+    <script src="out/Shapes/TwoHalfButton.js"></script>
+    <script src="out/Themes/Theme.js"></script>
+    <script src="out/Themes/DefaultTheme.js"></script>
+    <script src="out/Themes/VividTheme.js"></script>
+    <script src="out/Views/CanvasView.js"></script>
+    <script src="out/Views/GomokuView.js"></script>
+    <script src="out/Views/MenuView.js"></script>
+    <script src="out/Models/Player.js"></script>
+    <script src="out/Models/Chessman.js"></script>
+    <script src="out/Models/Chessboard.js"></script>
+    <script src="out/AIs/GomokuAI.js"></script>
+    <script src="out/AIs/AIScore.js"></script>
+    <script src="out/AIs/Matrix.js"></script>
+    <script src="out/AIs/TestAI_1.js"></script>
+    <script src="out/GomokuGame.js"></script>
+    <script src="out/GomokuViewController.js"></script>
+    <script type="text/javascript">
+        new GomokuViewController(true);
     </script>
 </html>
