现在可以显示五子棋的步数了

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <script src="out/Shapes/Rectangle.js"></script>
     <script src="out/Shapes/Line.js"></script>
     <script src="out/Shapes/ChessboardShape.js"></script>
-    <script src="out/Shapes/ChessmanShape.js"></script>
+    <script src="out/Shapes/ChessShape.js"></script>
     <script src="out/Shapes/TextShape.js"></script>
-    <script src="out/Shapes/TwoHalfButton.js"></script>
+    <script src="out/Shapes/TwoHalfCircle.js"></script>
+    <script src="out/Shapes/TextCircle.js"></script>
     <script src="out/Themes/Theme.js"></script>
     <script src="out/Themes/DefaultTheme.js"></script>
     <script src="out/Themes/VividTheme.js"></script>
