将博弈记录存在 IndexedDB 中

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <script src="out/Views/GomokuView.js"></script>
     <script src="out/Views/MenuView.js"></script>
     <script src="out/Models/Player.js"></script>
-    <script src="out/Models/Chessman.js"></script>
+    <script src="out/Models/Chess.js"></script>
     <script src="out/Models/Chessboard.js"></script>
+    <script src="out/Models/GomokuDB.js"></script>
     <script src="out/AIs/GomokuAI.js"></script>
     <script src="out/AIs/AIScore.js"></script>
     <script src="out/AIs/Matrix.js"></script>
