新AI（实现minmax失败）

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="out/AIs/AIScore.js"></script>
     <script src="out/AIs/Matrix.js"></script>
     <script src="out/AIs/TestAI_1.js"></script>
+    <script src="out/AIs/TestAI_2.js"></script>
     <script src="out/GomokuGame.js"></script>
     <script src="out/GomokuViewController.js"></script>
     <script type="text/javascript">
